--- a/frontend/src/app/components/systems/new-node/new-node.component.scss
+++ b/frontend/src/app/components/systems/new-node/new-node.component.scss
@@ -7,16 +7,22 @@
 
 .modal-card-head {
   padding: 15px;
-  overflow-wrap: break-word;
-
-  @include mobile {
-    font-size: 1.25rem;
-  }
+  // overflow-wrap: break-word;
 
   & .modal-card-title {
     display: flex;
+    align-items: center;
     font-weight: 600;
     margin: 0;
+
+    .material-icons {
+      font-size: 2rem;
+    }
+
+    .title-container {
+      display: flex;
+      flex-direction: column;
+    }
   }
 }
 
