--- a/frontend/src/app/components/systems/new-node/new-node.component.html
+++ b/frontend/src/app/components/systems/new-node/new-node.component.html
@@ -1,17 +1,17 @@
-<div class="modal" [class.is-active]="isActive" *ngIf="isActive">
+<div class="modal is-active">
   <div class="modal-background"></div>
   <div class="modal-card">
     <!-- HEADER -->
     <header
       class="modal-card-head"
-      [class]="'has-background-' + color.replace('is-', '')"
+      [class]="'has-background-' + newNodeData.color.replace('is-', '')"
     >
       <div class="modal-card-title">
         <!-- Header left icon -->
         <span
           class="icon mr-3"
           [class]="
-            ['is-warning', 'is-light'].includes(color)
+            ['is-warning', 'is-light'].includes(newNodeData.color)
               ? 'has-text-grey-darker'
               : 'has-text-white'
           "
@@ -22,28 +22,28 @@
           <p
             class="title is-5 has-text-white"
             [class]="
-              ['is-warning', 'is-light'].includes(color)
+              ['is-warning', 'is-light'].includes(newNodeData.color)
                 ? 'has-text-grey-darker'
                 : 'has-text-white'
             "
           >
-            {{ isSmart ? "Nodo Smart" : "Nodo Semplice" }}
+            {{ newNodeData.isSmart ? "Nodo Smart" : "Nodo Semplice" }}
           </p>
           <!-- Header subtitle -->
           <p
             class="subtitle is-6"
             [class]="
-              ['is-warning', 'is-light'].includes(color)
+              ['is-warning', 'is-light'].includes(newNodeData.color)
                 ? 'has-text-grey-darker'
-                : 'has-text-' + color.replace('is-', '') + '-light'
+                : 'has-text-' + newNodeData.color.replace('is-', '') + '-light'
             "
           >
-            {{ systemName }}
+            {{ newNodeData.systemName }}
           </p>
         </div>
       </div>
       <!-- Close button -->
-      <button class="delete is-large" (click)="close()"></button>
+      <button class="delete is-large" (click)="onClose()"></button>
     </header>
 
     <!-- BODY -->
@@ -62,7 +62,7 @@
               placeholder="Inserisci o scansiona l'id del nodo"
               [minlength]="13"
               [maxLength]="13"
-              [(ngModel)]="node.id"
+              [(ngModel)]="formData.nodeId"
               #id="ngModel"
               required
               [class.is-danger]="
@@ -81,8 +81,8 @@
           <div class="control">
             <a
               class="button"
-              [class]="color + ' is-light'"
-              (click)="onQrScan()"
+              [class]="newNodeData.color + ' is-light'"
+              (click)="onQrCodeScan()"
             >
               <span class="icon is-small">
                 <i class="material-icons">qr_code_scanner</i>
@@ -101,13 +101,13 @@
               name="node-name"
               id="node-name"
               [placeholder]="
-                isSmart
+                newNodeData.isSmart
                   ? 'Es: \'nodo-smart-stanza-1\''
                   : 'Es: \'nodo-semplice-stanza-1\''
               "
               [minlength]="5"
               [maxLength]="45"
-              [(ngModel)]="node.name"
+              [(ngModel)]="formData.nodeName"
               #name="ngModel"
               required
               [class.is-danger]="
@@ -127,13 +127,13 @@
         </div>
 
         <!-- Standalone node -->
-        <div class="field" id="standalone-field" *ngIf="isSmart">
+        <div class="field" id="standalone-field" *ngIf="newNodeData.isSmart">
           <div class="control is-flex is-align-content-center">
             <label class="checkbox">
               <input
                 type="checkbox"
                 name="node-standalone"
-                [(ngModel)]="node.isStandalone"
+                [(ngModel)]="formData.isStandalone"
                 [ngModelOptions]="{ standalone: true }"
               />
               Nodo Smart Standalone
@@ -149,23 +149,23 @@
         </div>
 
         <!-- Parent Smart Node -->
-        <div class="field" *ngIf="!isSmart">
+        <div class="field" *ngIf="!newNodeData.isSmart">
           <label class="label" for="node-parent">Nodo Smart associato</label>
-          <div class="control has-icon-left">
-            <div class="select" id="node-parent">
-              <select>
+          <p class="control has-icons-left">
+            <span class="select" id="node-parent">
+              <select (change)="onParentNodeSelectChange($event)">
                 <option
-                  *ngFor="let smartNode of this.node.smartNodes"
+                  *ngFor="let smartNode of this.newNodeData.smartNodes"
                   [value]="smartNode.id"
                 >
                   {{ smartNode.name }}
                 </option>
               </select>
-            </div>
-            <span class="icon is-left">
-              <i class="material-icons">sensors</i>
             </span>
-          </div>
+            <span class="icon is-left">
+              <i class="material-icons">hub</i>
+            </span>
+          </p>
         </div>
       </form>
     </section>
@@ -174,13 +174,22 @@
     <footer class="modal-card-foot">
       <div class="field">
         <div class="control">
-          <button type="submit" form="form" class="button" [class]="color">
+          <button
+            type="submit"
+            form="form"
+            class="button"
+            [class]="newNodeData.color"
+          >
             <span class="icon">
               <i class="material-icons">save</i>
             </span>
             <span>Salva</span>
           </button>
-          <button class="button is-light" [class]="color" (click)="close()">
+          <button
+            class="button is-light"
+            [class]="newNodeData.color"
+            (click)="onClose()"
+          >
             <span class="icon">
               <i class="material-icons">cancel</i>
             </span>
