Fixed panel header height when delete btn is shown

--- a/frontend/src/app/components/systems/new-node/new-node.component.html
+++ b/frontend/src/app/components/systems/new-node/new-node.component.html
@@ -61,7 +61,7 @@
               id="node-id"
               placeholder="Inserisci o scansiona l'id del nodo"
               [minlength]="13"
-              [maxLength]="13"
+              [maxlength]="13"
               [(ngModel)]="formData.nodeId"
               #id="ngModel"
               required
