--- a/frontend/src/app/components/systems/system-panel/system-panel.component.html
+++ b/frontend/src/app/components/systems/system-panel/system-panel.component.html
@@ -6,7 +6,7 @@
     >
     <span>{{ system.name }}</span>
     <button
-      class="button icon-right"
+      class="button is-small icon-right"
       #deleteSystemBtn
       *ngIf="!system.smartNodes.length"
       [class]="system.color"
