--- a/frontend/src/app/components/systems/system-panel/system-panel.component.scss
+++ b/frontend/src/app/components/systems/system-panel/system-panel.component.scss
@@ -4,15 +4,18 @@
 .panel-heading {
   display: flex;
   align-items: center;
-  & .icon-left {
+  .icon-left {
     margin-right: 0.5em;
   }
-  & .icon-right {
+  .icon-right {
     margin-left: auto;
     &:hover {
       color: $icon-hover;
       cursor: pointer;
     }
+  }
+  .button {
+    max-height: 25px;
   }
 }
 
