--- a/frontend/src/app/components/systems/new-node/new-node.component.scss
+++ b/frontend/src/app/components/systems/new-node/new-node.component.scss
@@ -6,7 +6,7 @@
 }
 
 .modal-card-head {
-  padding: 15px;
+  padding: 0.75rem;
 
   & .modal-card-title {
     display: flex;
@@ -25,8 +25,27 @@
   }
 }
 
+.modal-card-body {
+  // position: relative;
+}
+
+.qr-code-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  border: 1px solid red;
+  max-width: 500px;
+  // aspect-ratio: 4 / 3;
+  // height: 300px;
+}
+
 .modal-card-foot {
   padding: 15px;
   background-color: hsl(0deg, 0%, 100%);
   border-top: none;
 }
+
+/*
+  478 : 358 = 4 : 3
+*/
