--- a/frontend/src/app/components/nav/nav-menu/nav-menu.component.scss
+++ b/frontend/src/app/components/nav/nav-menu/nav-menu.component.scss
@@ -3,13 +3,13 @@
 
 $link-bg-color: rgba(0, 0, 0, 0.25);
 
+.link-inactive {
+  color: $icon-inactive;
+}
+
 .link-active {
   background-color: $link-bg-color;
   color: $icon-active;
-}
-
-.link-inactive {
-  color: $icon-inactive;
 }
 
 .menu-container {
@@ -17,20 +17,12 @@ $link-bg-color: rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
 
-  & a {
+  a {
     display: flex;
     align-items: center;
     padding-left: 1em;
     height: 3.75em;
 
-    &:hover:not(.link-active),
-    &:focus:not(.link-active) {
-      background-color: $link-bg-color;
-    }
-    &:active {
-      background-color: $link-bg-color;
-    }
-    // Mobile view
     @include mobile {
       height: 3.25em;
     }
@@ -41,7 +33,6 @@ $link-bg-color: rgba(0, 0, 0, 0.25);
   font-size: 1.75em;
   margin-right: 16px;
 
-  // Mobile view
   @include mobile {
     font-size: 1.5em;
   }
